--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,6 +78,10 @@
   }
   
   #navbar nav a.menu-icon {
+    display: block;
+    float: right;
+    font-size: 1.5em;
+    padding 10px 20px;
     
   }
 }
