--- a/css/responsive.css
+++ b/css/responsive.css
@@ -81,7 +81,7 @@
     display: block;
     float: right;
     font-size: 1.5em;
-    padding 10px 20px;
-    
+    padding: 10px 20px;
+    width: auto;
   }
 }
